More additions to CSS.

--- a/index.html
+++ b/index.html
@@ -177,23 +177,31 @@
                <div class="container">
                    <div class="usercard">
                         <div class="userIcon"></div>
-                        <p class="userTag">@jsmith</p>
-                        <p class="username">John Smith</p>
+                        <div class="userInfo">
+                            <p class="userTag">@RGivens</p>
+                            <p class="username">Raylan Givens</p>
+                        </div>
                     </div>
                     <div class="usercard">
                         <div class="userIcon"></div>
-                        <p class="userTag">@jsmith</p>
-                        <p class="username">John Smith</p>
+                        <div class="userInfo">
+                            <p class="userTag">@TheGeneral</p>
+                            <p class="username">Dwight Manfredi</p>
+                        </div>
                     </div>
                     <div class="usercard">
                         <div class="userIcon"></div>
-                        <p class="userTag">@jsmith</p>
-                        <p class="username">John Smith</p>
+                        <div class="userInfo">
+                            <p class="userTag">@YellowS</p>
+                            <p class="username">Kayce Dutton</p>
+                        </div>
                     </div>
                     <div class="usercard">
                         <div class="userIcon"></div>
-                        <p class="userTag">@jsmith</p>
-                        <p class="username">John Smith</p>
+                        <div class="userInfo">
+                            <p class="userTag">@Richmond</p>
+                            <p class="username">Ted Lasso</p>
+                        </div>
                     </div>
                </div>
             </div>
